<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".loginPage.LoginActivity">

    <ImageView
        android:id="@+id/img_login"
        android:layout_width="330dp"
        android:layout_height="224dp"
        android:src="@drawable/login_picture"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="120dp"/>

    <TextView
        android:id="@+id/txt_wellcome_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_login"
        android:text="@string/wellcome_title"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:textSize="14sp"
        android:fontFamily="@font/interblack"/>

    <TextView
        android:id="@+id/txt_wellcome_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/wellcome_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_wellcome_title"
        android:textAlignment="center"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:textStyle="normal"
        android:fontFamily="@font/intermedium"/>


    <com.example.capstone_1.customView.CustomButton
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_wellcome_text"
        android:layout_marginTop="12dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        android:text="@string/login"
        android:fontFamily="@font/interbold"/>

    <TextView
        android:id="@+id/txt_under_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dont_have_account"
        app:layout_constraintTop_toBottomOf="@id/btn_login"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="12dp"
        android:layout_marginStart="120dp"
        android:layout_marginEnd="24dp"
        android:gravity="center"
        android:textSize="12sp"
        android:fontFamily="@font/intermedium"/>

    <TextView
        android:id="@+id/txt_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        app:layout_constraintLeft_toRightOf="@id/txt_under_login"
        app:layout_constraintTop_toTopOf="@id/txt_under_login"
        android:layout_marginStart="4dp"
        android:textColor="@color/purple_700"
        android:textSize="12sp"
        android:fontFamily="@font/intermedium"/>

</androidx.constraintlayout.widget.ConstraintLayout>