<?xml version="1.0" encoding="utf-8"?>
    <ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".mainPage.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txt_dermaCare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dermaCare"
            android:fontFamily="@font/interbold"
            android:textColor="@color/black"
            android:textSize="20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="25dp"
            android:layout_marginTop="20dp"/>

        <ImageButton
            android:id="@+id/img_logout"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/logout_icon"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@null"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="15dp"/>


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cv_wellcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="90dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            app:cardBackgroundColor="@color/green_1"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/txt_halo_user"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/halo_user"
                    android:textAlignment="center"
                    android:fontFamily="@font/interbold"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:layout_marginTop="12dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/wellcome_to_dermacare"
                    android:textAlignment="center"
                    android:fontFamily="@font/interbold"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="12dp"/>
            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/txt_diagnosa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/diagnosa"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cv_wellcome"
            android:layout_marginTop="14dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:textColor="@color/black"
            android:fontFamily="@font/interbold"
            android:textSize="16sp"/>

        <com.example.capstone_1.customView.CustomButton
            android:id="@+id/btn_upload"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_diagnosa"
            android:layout_marginTop="12dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            android:text="@string/unggah_gambar"
            android:fontFamily="@font/interbold"
            android:drawableStart="@drawable/image_icon"
            android:drawablePadding="16dp"/>

        <com.example.capstone_1.customView.CustomButton
            android:id="@+id/btn_camera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_upload"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="12dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            android:drawableStart="@drawable/camera_icon"
            android:text="@string/ambil_gambar"
            android:fontFamily="@font/interbold"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/txt_artikel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/artikel"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_camera"
            android:layout_marginStart="24dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="24dp"
            android:fontFamily="@font/interbold"
            android:textColor="@color/black"
            android:textSize="16sp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_artikel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_artikel"
            tools:listitem="@layout/item_artikel"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
